# filegpt

./: docker-compose.yml  readme.md
backend/: Dockerfile  nginx-selfsigned.crt  nginx-selfsigned.key  pyproject.toml
backend/filegpt_backend/: .env  .gitignore  db.sqlite3  example.env
backend/filegpt_backend/chat/: llm.py  models.py  serializer.py  urls.py  views.py
backend/filegpt_backend/filegpt_backend/: settings.py  urls.py  wsgi.py
backend/filegpt_backend/files/: file_processor.py  models.py  serializers.py  urls.py  views.py
backend/filegpt_backend/files/migrations/: 0001_initial.py
backend/filegpt_backend/media/uploads/: Questionaire_MFM9Jem.xlsx
backend/nginx/: nginx.conf
filegpt-frontend/: Dockerfile  example.env  package-lock.json  package.json
filegpt-frontend/src/app/: page.tsx
filegpt-frontend/src/app/api/chat/: route.ts
filegpt-frontend/src/app/api/chat-user/[userId]/: route.ts
filegpt-frontend/src/app/api/chat/[chatId]/: route.ts
filegpt-frontend/src/app/api/upload-file/: route.ts
filegpt-frontend/src/app/api/upload-file/[someId]/: route.ts
filegpt-frontend/src/app/chat/[chatId]/: page.tsx
filegpt-frontend/src/components/: ChatComponent.tsx  FileUpload.tsx  MessageList.tsx
filegpt-frontend/src/lib/: AxiosRequests.ts
